--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,3 +1,129 @@
-body{
-	font-size: 20px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    font-family: "convergence", sans-serif;
+    display: grid;
+    background-image: url("../img/banner.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.lol {
+    font-size: 40px;
+    width: 600px;
+    padding: 30px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+    border-radius: 30px;
+}
+
+
+/* Acadimac Logo */
+
+.fuimg {
+    position: fixed;
+    top: 2%;
+    left: 80%;
+    box-sizing: border-box;
+}
+
+
+/* About the input boxs */
+
+.container {
+    width: 400px;
+    padding: 30px;
+    border-radius: 10px;
+    top: 150%;
+    left: -50%;
+    position: absolute;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+}
+
+.container .inputs {
+    height: 40px;
+    width: 100%;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+
+/* how the input box look like */
+
+.container .inputs input {
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-bottom: 2px solid gray;
+    outline: none;
+    font-size: 16px;
+    transition: 0.3s;
+    background: none;
+}
+
+.container .inputs input:focus {
+    border-color: crimson;
+}
+
+
+/* words moving */
+
+.container .inputs label {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    pointer-events: none;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+
+/* words moving */
+
+.container .inputs input:focus~label,
+.container .inputs input:valid~label {
+    transform: translateY(-23px);
+    color: crimson;
+}
+
+
+/* Buttom */
+
+input[type="submit"] {
+    width: 300px;
+    height: 50px;
+    border: 1px solid;
+    background: #2691d9;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+input[type="submit"]:hover {
+    border-color: #2691d9;
+    transition: .5s;
+}
+
+.signup_link {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+}
+
+.signup_link a {
+    color: #2691d9;
+    text-decoration: none;
+}
+
+.signup_link a:hover {
+    text-decoration: underline;
 }
