--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,8 +1,9 @@
 * {
-    margin: 0;
+    /* margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; */
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 body {
@@ -11,12 +12,14 @@ body {
     background-image: url("../img/banner.jpg");
     background-size: cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 .lol {
-    margin: 10px;
+    margin: 5px;
+    /* top: 1%; */
     font-size: 40px;
-    width: 560px;
+    width: 37%;
     padding: 30px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
     border-radius: 30px;
@@ -28,18 +31,28 @@ body {
 
 .lol1 {
     font-size: 40px;
-    width: 600px;
+    width: 37%;
     padding: 20px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
     border-radius: 30px;
-    top: 53%;
-    left: 60%;
+    top: 40%;
+    left: 62%;
     position: absolute;
     box-sizing: border-box;
 }
 
-
-/* Acadimac Logo */
+.container {
+    width: 23%;
+    height: 50%;
+    padding: 20px;
+    border-radius: 30px;
+    top: 40%;
+    left: 49.5%;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+}
 
 .fuimg {
     position: fixed;
@@ -49,19 +62,109 @@ body {
 }
 
 
-/* About the input boxs */
+/* Buttom */
 
-.container {
-    width: 400px;
-    padding: 30px;
-    border-radius: 10px;
-    top: 175%;
-    left: -180%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+input[type="submit"] {
+    width: 85%;
+    height: 50px;
+    border: 2px solid;
+    background: #2691d9;
+    border-radius: 25px;
+    font-size: 25px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    /* outline: none; */
 }
+
+input[type="submit"]:hover {
+    border-color: #161111;
+    transition: .5s;
+    color: #6a4949;
+}
+
+
+/* .signup_link {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+} */
+
+
+/* .signup_link a {
+    color: #2691d9;
+    text-decoration: none;
+} */
+
+
+/* .signup_link a:hover {
+    text-decoration: underline;
+} */
+
+@media screen and (max-width:980px) {
+    body {
+        background-image: url("../img/bannercat1.jpg");
+        /* background-image: url("../img/bannercat.jpg"); */
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+    }
+    /*     img {
+        height: 300px;
+        width: 300px;
+    } */
+    .lol {
+        display: inline;
+        font-size: 63px;
+        color: green;
+        width: 90%;
+        top: 13%;
+        left: 5%;
+        right: 5%;
+        position: fixed;
+        /* background: green;   */
+    }
+    .lol1 {
+        top: 62%;
+        left: 5%;
+        right: 5%;
+        position: fixed;
+        width: 90%;
+        font-size: 55px;
+    }
+    .container {
+        top: 45%;
+        left: 50%;
+        position: absolute;
+        width: 50%;
+        height: 32%;
+        font-size: 25px;
+    }
+    .fuimg {
+        top: 1%;
+        left: 35%;
+        position: fixed;
+    }
+}
+
+
+/* @media screen and (min-width:601px) and (max-width:900px) {
+    .lol {
+        display: block;
+        width: 40%;
+        background: blue;
+    }
+    body {
+        background: yellow;
+    }
+} */
+
+
+/* Acadimac Logo */
+
+
+/* About the input boxs */
 
 .container .inputs {
     height: 40px;
@@ -107,41 +210,4 @@ body {
 .container .inputs input:valid~label {
     transform: translateY(-23px);
     color: crimson;
-}
-
-
-/* Buttom */
-
-input[type="submit"] {
-    width: 300px;
-    height: 50px;
-    border: 1px solid;
-    background: #2691d9;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-}
-
-input[type="submit"]:hover {
-    border-color: #2691d9;
-    transition: .5s;
-}
-
-.signup_link {
-    margin: 30px 0;
-    text-align: center;
-    font-size: 16px;
-    color: #666666;
-}
-
-.signup_link a {
-    color: #2691d9;
-    text-decoration: none;
-}
-
-.signup_link a:hover {
-    text-decoration: underline;
 }
