--- a/CSS/book.css
+++ b/CSS/book.css
@@ -20,7 +20,6 @@
     width: 100%;
     height: 8%;
     color: white;
-    font-size: 30px;
     background-color: rgb(51, 54, 54);
 }
 
@@ -28,8 +27,19 @@
     background-color: rgb(51, 54, 54);
     display: inline-block;
     position: absolute;
-    width: 20%;
-    left: 40%;
-    right: 40%;
+    width: 30%;
+    left: 35%;
+    right: 35%;
     top: 10px;
+    font-size: 30px;
+}
+
+@media screen and (max-width:750px) {
+    .header .center {
+        font-size: 20px;
+        position: absolute;
+        width: 50%;
+        left: 25%;
+        right: 25%;
+    }
 }
