--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -211,3 +211,20 @@ input[type="submit"]:hover {
     transform: translateY(-23px);
     color: crimson;
 }
+
+
+/* APIs */
+
+gapi.load('auth2',
+function() {
+    gapi.auth2.init();
+}
+
+);
+function onSignIn(googleUser) {
+    var profile=googleUser.getBasicProfile();
+    console.log('ID: '+profile.getId()); // Do not send to your backend! Use an ID token instead.
+    console.log('Name: '+profile.getName());
+    console.log('Image URL: '+profile.getImageUrl());
+    console.log('Email: '+profile.getEmail()); // This is null if the 'email' scope is not present.
+}
