--- a/Code/Style/sidebar.css
+++ b/Code/Style/sidebar.css
@@ -304,7 +304,10 @@ body.dark .home .text {
     width: 89%;
     left: 10%;
     display: block;
-    top: 75%;
+    top: 84%;
+    color: #707070;
+    font-size: 20px;
+    text-align: center;
 }
 
 .container {
@@ -345,7 +348,7 @@ body.dark .home .text {
         top: 75%;
     }
     .container {
-        z-index: 10000000000;
+        z-index: 100;
         position: absolute;
         width: 65%;
         height: 11%;
