--- a/Code/Style/team.css
+++ b/Code/Style/team.css
@@ -1,18 +1,43 @@
 button {
     position: absolute;
     left: 22%;
-    top: 5%;
-    width: 250px;
+    top: 20%;
+    width: 275px;
     font-size: 30px;
-    background-color: #fcc41c;
+    background-color: #fdf73c;
+    border: 2px solid #111;
+}
+
+.chance {
+    position: absolute;
+    left: 22%;
+    top: 47%;
+    width: 275px;
+    font-size: 30px;
+    background-color: #fdf73c;
+    border-color: black;
+    border: 2px solid #111;
+    text-align: center;
 }
 
 .add {
     display: block;
     position: absolute;
     left: 22%;
-    top: 15%;
+    top: 4%;
     color: #757575;
+    font-size: 20px;
+    width: 50%;
+}
+
+.add1 {
+    display: block;
+    position: absolute;
+    left: 22%;
+    top: 30%;
+    color: #757575;
+    font-size: 20px;
+    width: 50%;
 }
 
 
@@ -277,5 +302,37 @@ button {
     .popup .content {
         top: 110px;
         z-index: 1000;
+    }
+    button {
+        position: absolute;
+        left: 22%;
+        top: 20%;
+        width: 70%;
+    }
+    .chance {
+        position: absolute;
+        left: 22%;
+        top: 45%;
+        width: 70%;
+    }
+    .add {
+        display: block;
+        position: absolute;
+        left: 18%;
+        width: 79%;
+        top: 4%;
+        color: #757575;
+        font-size: 15px;
+        text-align: center;
+    }
+    .add1 {
+        display: block;
+        position: absolute;
+        left: 18%;
+        width: 79%;
+        top: 29%;
+        color: #757575;
+        font-size: 15px;
+        text-align: center;
     }
 }
