--- a/Code/Style/about.css
+++ b/Code/Style/about.css
@@ -7,8 +7,45 @@
 
 .pdf .dd {
     position: absolute;
-    /* top: 50%; i put that for resune maybe i have to add somtheng*/
+    top: 30%;
     left: 15%;
     width: 85%;
-    height: 100%;
+    height: 70%;
+}
+
+
+/* Download Button */
+
+p {
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    font-size: 20px;
+    color: #757575;
+}
+
+.download-btn {
+    position: absolute;
+    top: 14%;
+    left: 15%;
+    background-color: DodgerBlue;
+    color: white;
+    padding: 1rem 2rem;
+    font-size: 2rem;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.download-btn:hover {
+    background-color: RoyalBlue;
+}
+
+@media screen and (max-width:600px) {
+    .pdf {
+        display: block;
+    }
+    .download-btn {
+        position: absolute;
+        top: 30%;
+    }
 }
