--- a/Code/Style/about.css
+++ b/Code/Style/about.css
@@ -1,16 +1,16 @@
 .pdf {
-    align-content: center;
+    /* align-content: center; */
     /* background-color: rgb(128, 118, 118); */
-    width: 100%;
-    height: 570px;
+    /* width: 100%; */
+    /* height: 570px; */
 }
 
 .pdf .dd {
     position: absolute;
-    top: 30%;
-    left: 15%;
-    width: 85%;
-    height: 70%;
+    top: 0%;
+    left: 50%;
+    width: 50%;
+    height: 100%;
 }
 
 
@@ -19,15 +19,16 @@
 p {
     position: absolute;
     top: 5%;
-    left: 15%;
+    left: 8%;
+    width: 42%;
     font-size: 20px;
     color: #757575;
 }
 
 .download-btn {
     position: absolute;
-    top: 14%;
-    left: 15%;
+    top: 18%;
+    left: 8%;
     background-color: DodgerBlue;
     color: white;
     padding: 1rem 2rem;
