--- a/Code/Style/about.css
+++ b/Code/Style/about.css
@@ -1,9 +1,9 @@
-.pdf {
-    /* align-content: center; */
-    /* background-color: rgb(128, 118, 118); */
-    /* width: 100%; */
-    /* height: 570px; */
-}
+/* .pdf {
+    align-content: center;
+    background-color: rgb(128, 118, 118);
+    width: 100%;
+    height: 570px;
+} */
 
 .pdf .dd {
     position: absolute;
@@ -58,7 +58,7 @@ p {
         background-color: DodgerBlue;
         color: white;
         padding: 1rem 2rem;
-        font-size: 2rem;
+        font-size: 1.6rem;
         text-decoration: none;
         border-radius: 5px;
         width: 80%;
