--- a/Code/Style/sidebar.css
+++ b/Code/Style/sidebar.css
@@ -361,3 +361,46 @@ body.dark .home .text {
         left: 5%;
     } */
 }
+
+
+/* Submenu */
+
+
+/* Submenu */
+
+
+/* Submenu */
+
+.sidebar .menu .submenu {
+    position: absolute;
+    left: 90%;
+    background-color: #fff;
+    padding: 10px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+    display: none;
+    width: 230px;
+    font-size: 25px;
+    margin: 10px;
+    border: 2px solid;
+}
+
+.sidebar .submenu i {
+    width: 210px;
+    padding: 5px;
+    border: 2px solid;
+}
+
+.sidebar .submenu i {
+    color: black;
+    text-decoration: none;
+}
+
+.sidebar .submenu i a:hover {
+    /* color: #F00; */
+}
+
+.sidebar #AA:hover .submenu {
+    display: inline-block;
+}
