--- a/Code/Style/sidebar.css
+++ b/Code/Style/sidebar.css
@@ -341,7 +341,7 @@ body.dark .home .text {
         width: 55px;
         padding: 0px 0px;
     }
-    .Contant {
+    .Contant123 {
         position: absolute;
         width: 82%;
         left: 16%;
