--- a/Code/Style/Main.css
+++ b/Code/Style/Main.css
@@ -16,7 +16,7 @@ body {
 }
 
 
-/* Big */
+/* New */
 
 .data {
     display: none;
@@ -52,7 +52,7 @@ body {
 }
 
 
-/* Big */
+/* New end */
 
 .lol {
     margin: 5px;
