--- a/Code/Style/sidebar.css
+++ b/Code/Style/sidebar.css
@@ -350,6 +350,7 @@ body.dark .home .text {
     } */
     .sidebar .menu .submenu {
         width: 240;
+        font-size: 24px;
     }
     .sidebar .submenu i {
         width: 230;
