--- a/Code/Style/Main.css
+++ b/Code/Style/Main.css
@@ -208,13 +208,13 @@ input[type="submit"]:hover {
         font-size: 20px;
     }
     .fuimg {
-        position: absolute;
+        /* position: absolute;
         top: 0%;
         left: 16%;
         position: relative;
         width: 20px;
         height: 20px;
-        z-index: 1;
+        z-index: 1; */
         display: none;
     }
     .container {
