--- a/Code/Style/Main.css
+++ b/Code/Style/Main.css
@@ -22,7 +22,7 @@ body {
     display: none;
     position: absolute;
     left: 70%;
-    top: 1%;
+    /* top: 1%; */
     color: #757575;
     font-size: 10px;
 }
