--- a/Code/Style/Abou.css
+++ b/Code/Style/Abou.css
@@ -52,21 +52,23 @@ p {
         display: none;
     }
     .download-btn {
-        position: relative;
-        top: 35%;
+        position: absolute;
+        top: 40%;
         left: 15%;
         background-color: DodgerBlue;
         color: white;
-        /* padding: 1rem 2rem; */
+        padding: 1rem 2rem;
         /* font-size: 1.9rem; */
+        font-size: 29px;
         text-decoration: none;
         border-radius: 5px;
-        /* width: 50%; */
+        width: 85%;
     }
     p {
         position: absolute;
         top: 5%;
         left: 20%;
-        /* width: 80%; */
+        width: 80%;
+        /* display: block; */
     }
 }
