--- a/Code/Style/h.css
+++ b/Code/Style/h.css
@@ -1,45 +1,1 @@
-.BBB {
-    position: absolute;
-    padding: 0%;
-    margin: 0%;
-    width: 150px;
-    height: 50px;
-    font-size: 25px;
-    left: 45%;
-    top: 73%;
-    color: #757575;
-}
-
-.AContant {
-    position: absolute;
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    width: 60%;
-    height: 50px;
-    font-size: 25px;
-    left: 22%;
-    top: 78%;
-    color: #757575;
-}
-
-@media screen and (max-width:600px) {
-    .BBB {
-        text-align: center;
-        width: 150px;
-        height: 50px;
-        font-size: 25px;
-        left: 36%;
-        top: 70%;
-    }
-    .AContant {
-        position: absolute;
-        padding: 0%;
-        margin: 0%;
-        width: 330px;
-        height: 50px;
-        font-size: 25px;
-        left: 15%;
-        top: 75%;
-    }
-}
+@media screen and (max-width:600px) {}
