--- a/Code/Style/show.css
+++ b/Code/Style/show.css
@@ -59,7 +59,7 @@
     padding: 20px;
     border-radius: 10px;
     color: #757575;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 
@@ -124,13 +124,14 @@
         left: 57.5%;
         width: 80%;
         height: 50%;
+        font-size: 15px;
     }
     .BBB {
         text-align: center;
-        width: 150px;
-        height: 50px;
+        /* width: 150px; */
+        /* height: 50px; */
         font-size: 25px;
-        left: 36%;
+        left: 25%;
         top: 70%;
     }
     .AContant {
