--- a/Code/Style/proGit5.css
+++ b/Code/Style/proGit5.css
@@ -3,7 +3,7 @@
 .Upload {
     position: absolute;
     width: 20%;
-    height: 51%;
+    /* height: 51%; */
     top: 17%;
     left: 13%;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
@@ -22,16 +22,37 @@
 }
 
 
-/* button {
-    position: relative;
-    left: 10%;
-    top: 0%;
+/* After Create Team */
+
+.Completion {
+    position: absolute;
+    left: 45%;
+    top: 30%;
+    width: 23%;
+    height: 40%;
+    background-color: #fff;
+    z-index: 1;
+    text-align: center;
+    font-size: 20px;
+}
+
+.Completion button {
     width: 230px;
     font-size: 25px;
-    display: block;
-    padding: 0;
-    margin: 10px;
-} */
+    text-align: center;
+    margin-top: 5%;
+}
+
+.Completion img {
+    /* padding: 10%; */
+    margin-top: 5%;
+    top: 10%;
+    height: 100px;
+    width: 100px;
+}
+
+
+/*  */
 
 .chance {
     position: absolute;
@@ -69,7 +90,6 @@
     left: 0px;
     width: 100vw;
     height: 100vh;
-    /* background: rgba(0, 0, 0, 0.7); */
     z-index: 1;
     display: none;
 }
@@ -162,7 +182,6 @@
         left: 18%;
         top: 6%;
         width: 79%;
-        height: 55%;
     }
     .Upload button {
         position: relative;
