--- a/Code/Style/show9.css
+++ b/Code/Style/show9.css
@@ -14,10 +14,11 @@
 
 .container123 h3 {
     position: absolute;
-    top: 5%;
-    left: 2%;
+    top: 10%;
+    left: 3%;
     display: inline-block;
     color: #707070;
+    font-size: 20px;
 }
 
 .container123 h4 {
@@ -33,8 +34,9 @@
     position: absolute;
     border-radius: 10px;
     width: 85%;
+    height: 22%;
     left: 10%;
-    top: 38%;
+    top: 39%;
 }
 
 .Center {
@@ -54,8 +56,7 @@
     border-radius: 10px;
     color: #757575;
     font-size: 20px;
-    margin-top: 1%;
-    display: block;
+    margin-top: 5%;
     padding: 2%;
 }
 
@@ -90,7 +91,7 @@
     padding: 0%;
     margin: 0%;
     font-size: 25px;
-    left: 80%;
+    left: 72%;
     top: 30%;
     color: #757575;
 }
@@ -122,12 +123,13 @@
         left: 18%;
         width: 80%;
         height: 11%;
+        top: 28%;
     }
     .container123 h3 {
-        font-size: 15px;
+        font-size: 13px;
         position: absolute;
-        left: 1%;
-        top: 5%;
+        left: 6%;
+        top: 12%;
     }
     .container123 h4 {
         font-size: 10px;
@@ -140,12 +142,12 @@
         width: 80%;
     }
     .Center {
-        margin-top: 0%;
+        top: 42%;
     }
     .show {
-        top: 46%;
-        left: 57.5%;
-        width: 80%;
+        /* top: 60%; */
+        left: 25%;
+        width: 155%;
         font-size: 15px;
         margin-top: 20%;
         padding: 5%;
@@ -169,5 +171,9 @@
         left: 15%;
         top: 75%;
         display: none;
+    }
+    .im {
+        left: 20%;
+        position: absolute;
     }
 }
