--- a/Code/Style/sidebar.css
+++ b/Code/Style/sidebar.css
@@ -16,7 +16,7 @@ body.dark {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 250px;
     /* width: 20%; */
     padding: 10px 14px;
