--- a/Code/Style/team9.css
+++ b/Code/Style/team9.css
@@ -1,10 +1,9 @@
-.Data {
+.proInfo {
     display: block;
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 45%;
     width: 52%;
-    padding: 5px;
     font-size: 25px;
     color: #757575;
     position: absolute;
@@ -13,21 +12,43 @@
     border-radius: 10px;
 }
 
+.proInfo h2 {
+    font-size: 38px;
+}
+
+.Memb {
+    display: block;
+    position: absolute;
+    top: 1%;
+    left: 20%;
+    font-size: 20px;
+    color: #757575;
+    position: absolute;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+    padding: 10px;
+    border-radius: 10px;
+    width: 21.5%;
+}
+
+.Memb h2 {
+    font-size: 30px;
+}
+
 .Download {
     position: absolute;
-    /* width: 20%; */
-    /* height: 51%; */
-    top: 20%;
+    top: 66%;
     left: 20%;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
     padding: 20px;
     border-radius: 10px;
+    /* display: none; */
+    width: 21.5%;
 }
 
 .Download button {
     position: relative;
     /* left: 4%; */
-    width: 255px;
+    width: 269px;
     font-size: 25px;
     display: block;
     padding: 0;
@@ -35,17 +56,31 @@
 }
 
 @media screen and (max-width:600px) {
-    .Data {
+    .proInfo {
+        left: 18%;
+        top: 113.5%;
+        width: 79%;
+        font-size: 15px;
+    }
+    .proInfo h2 {
+        font-size: 17.5px;
+    }
+    .Memb {
+        z-index: 100;
+        position: absolute;
         left: 18%;
         top: 6%;
         width: 79%;
-        font-size: 22px;
+        font-size: 20px;
+    }
+    .Memb h2 {
+        font-size: 17.5px;
     }
     .Download {
         z-index: 100;
         position: absolute;
         left: 18%;
-        top: 6%;
+        top: 75%;
         width: 79%;
         /* height: 55%; */
     }
@@ -57,4 +92,11 @@
         display: inline;
         margin: 2px;
     }
+}
+
+
+/* Some none */
+
+.im {
+    display: none;
 }
